# hsgp_lvm

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: hsgp_lvm.json  infer.json  svi.json
nb/: results.py
src/hgsp_lvm/model/: hsgp_lvm.py
src/hsgp_lvm/: __main__.py  enum.py  infer.py  io.py  main.py  results.py
src/hsgp_lvm/data/: mnist.py
src/hsgp_lvm/model/: config.py  hsgp_lvm.py  ppca.py
